--- a/website/contribute.html
+++ b/website/contribute.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Contributing</title>
 </head>
-<body>
+<body style="margin: 10px;">
 <h1>Contributing to the PseudoDojo project.</h1>
 
 <p>If you would like to contribute to the PseudoDojo project please visit the <a href="https://github.com/gmatteo/pseudo_dojo">githup repository</a>.<BR />
