--- a/website/about.html
+++ b/website/about.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>About</title>
 </head>
-<body>
+<body style="margin: 10px;">
 <H1>About PseudoDojo</H1>
 The PseudoDojo.org website gives access to the latest released version of the pseudopotentials of the PseudoDojo project.<BR />
 The PseudoDojo project is hosted on <a href="https://github.com/gmatteo/pseudo_dojo">githup</a>. It is a python package to develop, test and store pseudo potentials.<BR />
