--- a/website/faq.html
+++ b/website/faq.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Frequently asked questions</title>
 </head>
-<body>
+<body style="margin: 10px;">
 
 <h1>General</h1>
 
 <h2>How do I cite the PseudoDojo?</h2>
 The fully detailed paper on the pseudo dojo is still in preparation.<BR />
-For the moment you can site:<BR />
+For the moment you can cite:<BR />
 <blockquote>
 Reproducibility in density functional theory calculations of solids.<BR />
 K. Lejaeghere et. all, Science  25 Mar 2016, Vol. 351, Issue 6280, <a href='https://dx.doi.org/10.1126/science.aad3000'>10.1126/science.aad3000</a>
@@ -24,7 +24,7 @@ D. R. Hamann, Phys. Rev. B 88, 085117 <a href='https://doi.org/10.1103/PhysRevB.
 <H1>Concerning the ONCVPSP pseudopotentials</H1>
 
 <h2>Do you also have the pseudo for my favorite GGA or LDA functional?</h2>
-We provide PBE, PBEsol and one LDA set of pseudo potentials.<BR />
+We provide PBE, PBEsol, and one LDA set of pseudo potentials.<BR />
 The input files can be obtained from the dojo reports in the HTML files.<BR />
 Using these you can generate potentials for most LDA and GGA functionals using <a href="http://www.mat-simresearch.com/">ONCVPSP</a>.<BR />
 We could reuse most of out PBE inputs to generate the PBEsol potentials.<BR />
@@ -40,7 +40,7 @@ Turn icmod to 0 in the input and generate the pseudo.
 These are currently under development.<BR />
 
 <h2>Do you also have the other elements?</h2>
-We are currently working working on the Lantanides.<BR />
+We are currently working on the Lantanides.<BR />
 
 <h2>Is it also possible to get the pseudos in other formats?</h2>
 ONCVPSP currently supports psp8 and upf.<BR />
