--- a/website/about.html
+++ b/website/about.html
@@ -14,7 +14,7 @@ Previous versions can be found in the git repository.<BR />
 <P> The web interface provides various files:<BR />
 .psp8   : the pseudo in the psp8 format (abinit)<BR />
 .upf    : the pseudoo in the upf format (quantum esperesso)<BR />
-.html   : the test report of the pseudo as a static html verion of the dojo report jupyter notebook.<BR/>
+.html   : the test report of the pseudo as a static html version of the dojo report jupyter notebook.<BR/>
 .djrepo : the test report of the pseudo as a json document.<BR/>
 
 <P> The current version provided at this web interface is version 0.3: ONCVPSP_PDv0.3 in the git repository.
