--- a/website/contribute.html
+++ b/website/contribute.html
@@ -11,11 +11,22 @@
 <p>If you would like to contribute to the PseudoDojo project please visit the <a href="https://github.com/gmatteo/pseudo_dojo">githup repository</a>.<BR />
 Fork the project and commit your contributions.<BR />
 If you contribute new code, for instance for a new test, you also need to provide unittests for that code.<BR />
-We cannot accept code additions without unittests.<BR />
+We cannot accept code additions without unittests.</p>
 
 <p>Also contributing new pseudos should done via the git repository.<BR />
 If possible try to perform the tests that are already present.<BR />
-Some tests, like the Delta gauge, require all electron reference data that are only available for specific functionals, others don't.<BR />
+Some tests, like the Delta gauge, require all electron reference data that are only available for specific functionals, others don't.
+</p>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97858927-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </body>
 </html>
