--- a/website/faq.html
+++ b/website/faq.html
@@ -51,6 +51,15 @@ We are looking at the possibility to also provide them in the psml format.<BR />
 Yes, this is another project we are finishing at the moment.<BR />
 Most of the current PBE inputs also generate well using the fully relativistic version of ONCVPSP.<BR />
 When we have finished the final polishing we will also provide the last tuned special cases.<BR />
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-97858927-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
