--- a/website/index.html
+++ b/website/index.html
@@ -113,7 +113,7 @@ Format
 <div class="styled-select">
 <select id="ACC">
   <option value="s" selected>standard</option>
-  <option value="h">high</option>
+  <option value="h">stringent</option>
 </select>
 </div>
 </td>
