--- a/website/contribute.html
+++ b/website/contribute.html
@@ -8,7 +8,7 @@
 <body style="margin: 10px; font-size:100%">
 <h1>Contributing to the PseudoDojo project.</h1>
 
-<p>If you would like to contribute to the PseudoDojo project please visit the <a href="https://github.com/gmatteo/pseudo_dojo">githup repository</a>.<BR />
+<p>If you would like to contribute to the PseudoDojo project please visit the <a href="https://github.com/gmatteo/pseudo_dojo">github repository</a>.<BR />
 Fork the project and commit your contributions.<BR />
 If you contribute new code, for instance for a new test, you also need to provide unittests for that code.<BR />
 We cannot accept code additions without unittests.</p>
