--- a/website/index.html
+++ b/website/index.html
@@ -58,7 +58,7 @@
 
 
 
-<div class="detail 000_X" id="av">
+<div class="detail detail_position 000_X" id="av">
       <div class="element_l" id="av_el">Mean</div>
     <div class="l_top_l">hints</div>
     <div class="l_follow_l" id="av_hl" title="low cutoff energy hint">l</div>
@@ -82,7 +82,7 @@
       <h1 class="logo"><a href="index.html" title="The Pseudo Dojo">The Pseudo Dojo</a></h1>
     </div>
     <div class="atom_number_detail" id="N"></div>
-    <div class="detail" id="X_n">
+    <div class="detail detail_position" id="X_n">
       <div class="element" id="X_el">X</div>
       <div class="l_top">hints</div>
       <div class="l_follow" id="X_hl" title="low cutoff energy hint (Ha)">low</div>
