--- a/website/about.html
+++ b/website/about.html
@@ -5,10 +5,11 @@ Previous versions can be found in the git repository.<BR />
 
 <P> The web interface provides various files:</P>
 <ul>
-<li><b>.psp8</b>   : the pseudo in the psp8 format (abinit)</li>
-<li><b>.upf</b>    : the pseudoo in the upf format (quantum esperesso)</li>
-<li><b>.html</b>   : the test report of the pseudo as a static html version of the dojo report jupyter notebook.</li>
-<li><b>.djrepo</b> : the test report of the pseudo as a json document.</li>
+<li><b>.psp8</b>   : (NC) the pseudo in the psp8 format (abinit)</li>
+<li><b>.upf</b>    : (NC) the pseudoo in the upf format (quantum esperesso)</li>
+<li><b>.upf</b>    : (PAW) the paw dataset in xml format (abinit)</li>
+<li><b>.html</b>   : (NC) the test report of the pseudo as a static html version of the dojo report jupyter notebook.</li>
+<li><b>.djrepo</b> : (NC) the test report of the pseudo as a json document.</li>
 </ul>
 
 <P> The current version provided at this web interface is version 0.3: ONCVPSP_PDv0.3 in the git repository.</P>
