link to the youtube

--- a/website/index.html
+++ b/website/index.html
@@ -111,7 +111,7 @@
 <div class="table">
   <aside class="infobox">
     <div class="intro">
-      <h1 class="logo"><a href="index.html" title="The Pseudo Dojo">The Pseudo Dojo</a></h1>
+      <h1 class="logo"><a href="https://youtu.be/j9z4AJIx40M" target="_blank" title="The Pseudo Dojo">The Pseudo Dojo</a></h1>
     </div>
     <div class="atom_number_detail" id="N"></div>
     <div class="detail detail_position" id="X_n">
