--- a/website/index.html
+++ b/website/index.html
@@ -56,8 +56,6 @@
 <script src="dojo-tools.js">
 </script>
 
-
-
 <div class="detail 000_X" id="av">
       <div class="element_l" id="av_el">Mean</div>
     <div class="l_top_l">hints</div>
@@ -93,7 +91,13 @@
       <div class="r_follow" id="X_dp" title="normalized delta gauge:&#013;Normalized version of the delta gauge.">delta1</div>
       <div class="r_follow" id="X_gb" title="gbrv fcc bcc average (%):&#013;Relative error in the lattice parameter with respect to reference&#013;all electron results for elemental fcc and bcc structures.">gbrv</div>
     </div>
-    <div class="download_button">
+
+    <div class="help_button glow" onclick="dojoTour_guidedtour()" id="guided-tour-button" title="Guided Tour" >
+      Help me
+    </div>
+
+
+    <div id="download_button" class="download_button">
      Download
     </div>
     <div class="description">
@@ -131,7 +135,7 @@ Format
 </tr>
 <tr>
 <td>
-<div class="styled-longselect" onchange="load_set_info();">
+<div id="TYP-box" class="styled-longselect" onchange="load_set_info();">
   <select id="TYP" onchange="javascript: dynamicdropdown(this.options[this.selectedIndex].value);">
     <option value="nc-sr" selected>NC (ONCVPSP v0.3)</option>
 <!--  <option value="nc-soc">NC + SOC (ONCVPSP v0.3)</option> -->
@@ -140,7 +144,7 @@ Format
 </div>
 </td>
 <td>
-<div class="styled-select" onchange="load_set_info();">
+<div id="XCF-box" class="styled-select" onchange="load_set_info();">
   <script type="text/javascript" language="JavaScript">
     document.write('<select id="XCF"><option value="pw" selected>LDA</option><option value="pbe">PBE</option><option value="pbesol">PBEsol</option></select>');
   </script>
@@ -346,7 +350,7 @@ Format
       <div class="name">Aluminium</div>
     </div>
   </div>
-  <div class="plugin bg_metalloid 014_Si">
+  <div id="silicon" class="plugin bg_metalloid 014_Si">
     <div class="element">Si</div>
     <div class="l_top" id="Si_hl">hl</div>
     <div class="l_follow" id="Si_hn">hn</div>
@@ -1776,6 +1780,13 @@ Format
   ga('create', 'UA-97858927-1', 'auto');
   ga('send', 'pageview');
 </script>
+
+
+
+
+<!-- Introjs for Guided Tour -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.7.0/intro.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.7.0/introjs.min.css" />
 
 </body>
 </html>
